--- a/{{ cookiecutter.repo_name }}/.env
+++ b/{{ cookiecutter.repo_name }}/.env
@@ -18,5 +18,5 @@ CLIENT_SECRET="[your client secret]"
 CALLBACK_HOSTNAME = "localhost"
 CALLBACK_PORT = 3000
 REDIRECT_URI='http://localhost:3000/callback'
-BOX_TOKEN_CACHE_FILE = "[absolute path to your project folder]/.oauth.tk"
+BOX_TOKEN_CACHE_FILE = ".oauth.tk"
 {% endif %}
